[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/scenes/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/assets/sheets/kenney_sokobanpack/Tilesheet/sokoban_tilesheet.png" type="Texture" id=2]
[ext_resource path="res://src/assets/sheets/background-elements-redux-fix/Backgrounds/backgroundColorGrass.png" type="Texture" id=3]
[ext_resource path="res://src/scenes/greenTrashCan.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/scenes/blueTrashCan.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/scripts/Level-1.gd" type="Script" id=6]
[ext_resource path="res://src/scenes/noxiousGas.tscn" type="PackedScene" id=7]

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, -128, 0, 0, 0, 0, 1024, -128, 0, 0, 0, 0, 1024, 640, 0, 0, 0, 0, 0, 640, 0, 0, 0, 0, 0, -128 )
}

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=1]
0/name = "sokoban_tilesheet.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 704, 384, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "sokoban_tilesheet.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 512, 384, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 3 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "sokoban_tilesheet.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 512, 448, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "sokoban_tilesheet.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 384, 448, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[node name="Level-1" type="Node2D"]
script = ExtResource( 6 )
mob_scene = ExtResource( 7 )

[node name="blueTrashCan" parent="." instance=ExtResource( 5 )]
position = Vector2( 863, 555 )
scale = Vector2( 0.3, 0.3 )

[node name="greenTrashCan" parent="." instance=ExtResource( 4 )]
position = Vector2( 160, 555 )
scale = Vector2( 0.3, 0.3 )

[node name="MobSpawnTimer" type="Timer" parent="."]
autostart = true

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 4 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( 0, -128 )
rotation = 3.8889e-06

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 512, 384 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( -1, 2, 0, -65536, 2, 0, -65535, 2, 0, -65534, 2, 0, -65533, 2, 0, -65532, 2, 0, -65531, 2, 0, -65530, 2, 0, -65529, 2, 0, -65528, 2, 0, -65527, 2, 0, -65526, 2, 0, -65525, 2, 0, -65524, 2, 0, -65523, 2, 0, -65522, 2, 0, -65521, 2, 0, -65520, 2, 0, 65535, 1, 0, 16, 1, 0, 131071, 1, 0, 65552, 1, 0, 196607, 1, 0, 131088, 1, 0, 262143, 1, 0, 196624, 1, 0, 327679, 1, 0, 262160, 1, 0, 393215, 1, 0, 327696, 1, 0, 458751, 1, 0, 393232, 1, 0, 524287, 1, 0, 458768, 1, 0, 589823, 1, 0, 524304, 1, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 512, 407 )
texture = ExtResource( 3 )

[connection signal="timeout" from="MobSpawnTimer" to="." method="_on_MobSpawnTimer_timeout"]
